@@ -14,6 +14,7 @@
 #define HTTPP_VAR_REQ_TYPE "__req_type"
 #define HTTPP_VAR_ERROR_MESSAGE "__errormessage"
 #define HTTPP_VAR_ERROR_CODE "__errorcode"
+#define HTTPP_VAR_ICYPASSWORD "__icy_password"
 
 typedef enum httpp_request_type_tag {
 	httpp_req_none, httpp_req_get, httpp_req_post, httpp_req_head,
@@ -40,6 +41,7 @@ typedef struct http_parser_tag {
 http_parser_t *httpp_create_parser(void);
 void httpp_initialize(http_parser_t *parser, http_varlist_t *defaults);
 int httpp_parse(http_parser_t *parser, char *http_data, unsigned long len);
+int httpp_parse_icy(http_parser_t *parser, char *http_data, unsigned long len);
 int httpp_parse_response(http_parser_t *parser, char *http_data, unsigned long len, char *uri);
 void httpp_setvar(http_parser_t *parser, char *name, char *value);
 char *httpp_getvar(http_parser_t *parser, char *name);
